--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,13 @@
         android:required="false" />
     <uses-permission android:name="android.permission.CAMERA" />
 
+    <!--MQTT-->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".RobotApplication"
         android:allowBackup="true"
@@ -28,6 +35,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name="org.eclipse.paho.android.service.MqttService"
+            android:enabled="true" />
+        <service
+            android:name=".data.remote.mqtt.MqttMessageService"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 
 </manifest>
