--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!--SpeechToText-->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <application
         android:name=".RobotApplication"
         android:allowBackup="true"
